--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -89,7 +89,7 @@ title = "gitleaks config"
 	tags = ["key", "Stripe"]
 [[rules]]
 	description = "Encompass"
-	regex = '''(A3T[A-Z0-9]|Client | id | client_id)[\d | \w | \$ | \* | \^ | \! | \@ | \# | \& | \()]{64}'''
+	regex = '''^(?!client+id)|(?!client+secret).+[\d | \w | \$ | \* | \^ | \! | \@ | \# | \& | \()]{64}'''
 	tags = ["key", "encompass"]
 	
 [[rules]]
