--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -4,6 +4,11 @@ title = "gitleaks config"
 	regex = '''(A3T[A-Z0-9]|AKIA|AGPA|AIDA|AROA|AIPA|ANPA|ANVA|ASIA)[A-Z0-9]{16}'''
 	tags = ["key", "AWS"]
 [[rules]]
+	description = "Encompass"
+	regex = '''^(?!client+id)|(?!client+secret).+[\d | \w | \$ | \* | \^ | \! | \@ | \# | \& | \()]{64}'''
+	tags = ["key", "encompass"]
+	
+[[rules]]
 	description = "AWS Secret Key"
 	regex = '''(?i)aws(.{0,20})?(?-i)['\"][0-9a-zA-Z\/+]{40}['\"]'''
 	tags = ["key", "AWS"]
