--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -50,7 +50,7 @@ title = "gitleaks config"
 	tags = ["key", "AsymmetricPrivateKey"]
 [[rules]]
 	description = "Generic Credential"
-	regex = '''^(?!client+secret).|.(?!client+id).+[\d|\w]{64}'''
+	regex = ''''''
 	tags = ["key", "API", "generic"]
 [[rules]]
 	description = "Google API key"
