--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -50,7 +50,7 @@ title = "gitleaks config"
 	tags = ["key", "AsymmetricPrivateKey"]
 [[rules]]
 	description = "Generic Credential"
-	regex = ''''''
+	regex = '''client id[baprs]-([0-9a-zA-Z]{64})?'''
 	tags = ["key", "API", "generic"]
 [[rules]]
 	description = "Google API key"
