--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -50,7 +50,7 @@ title = "gitleaks config"
 	tags = ["key", "AsymmetricPrivateKey"]
 [[rules]]
 	description = "Encompass"
-	regex = '''^(\bclient secret\b)|(?!client+id)+[\d|\w]{64}'''
+	regex = ''''''
 	
 [[rules]]
 	description = "Google API key"
