--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -50,7 +50,7 @@ title = "gitleaks config"
 	tags = ["key", "AsymmetricPrivateKey"]
 [[rules]]
 	description = "Encompass"
-	regex = '''[a-zA-z_0-9]*(client.id|db_pass|db_password|client.secret)["']*(\s)*[=:](\s)*[a-zA-z+0-9_\!+=\@\^\&\*\&\'#']{66}'''
+	regex = '''[a-zA-z_0-9]*(api_key|token|apikey|db_pass|db_password|client.secret)["']*(\s)*[=:](\s)*[a-zA-z+0-9_\!+=\@\'#'\$\%\*\&]{66}'''
 	tags = ["key", "Encompass"]
 	
 [[rules]]
