--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -52,6 +52,11 @@ title = "gitleaks config"
 	description = "Encompass"
 	regex = '''[a-zA-z_0-9]*(api_key|token|apikey|db_pass|db_password|client.secret)["']*(\s)*[=:](\s)*[a-zA-z+0-9_\!+=\@\'#'\$\%\*\&]{64,66}'''
 	tags = ["key", "Encompass"]
+
+[[rules]]
+	description = "Password-hardcoded"
+	regex = '''[a-zA-z_0-9]*(?i)(api_key|token|apikey|db_pass|password|db_password)["']*(\s)*[=:](\s)*["'][a-zA-z+0-9_\!+=]+['"]'''
+	tags = ["key", "Password-hardtext"]
 	
 [[rules]]
 	description = "Google API key"
